support for both java 8 and java 9+
added support for both java 8 and java 9+ (i.e. JDK 9, 10, 11 etc)